# voxel-compiler

./: CMakeLists.txt  README.md  exampleinput.txt  pilz.txt  test.txt  test2.txt
build_win/: win_cmake.bat  win_exec.bat  win_exec_disasm.bat  win_exec_noout.bat
compiler/: lexer.l  main.cc  ops.h  out.gdi  parser.h  parser.y  util.h
disasm/: main.cc
sim/: fns.h  main.cc  octree.h
